cmake_minimum_required(VERSION 3.12)
project(final_work_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(final_work_2 main.cpp head/Node.h head/Graph.h head/quick_sort.h head/binary_search.h head/test.h head/HushList.h head/string_to_hush.h head/my_vector.h head/ui.h head/kmp.h head/functions.h head/work.h head/arc.h head/kruskal.h head/DFS_all_path.h head/my_list.h)